--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
