--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.7.1",
     "@vueuse/integrations": "^10.7.1",
+    "async-validator": "^4.2.5",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
