--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.45.0",
     "qrcode": "^1.5.3",
+    "universal-cookie": "^6.1.3",
     "vue": "^3.3.11",
     "vue-echarts": "^6.6.8",
     "vue-i18n": "^9.8.0",
